# search_engine_compressors

./: Cargo.toml  README.md
src/: lib.rs
src/p_for_delta/: mod.rs  utils.rs
src/rice/: mod.rs
src/simple16/: mod.rs
src/simple8b/: mod.rs
src/simple9/: mod.rs  utils.rs
src/var_byte/: mod.rs
